# simple-uri-parser

./: CMakeLists.txt  README.md  example.cpp  tests.cpp  uri_parser.h
